unpackaged/objects/Pooling_Plan__c.object
<CustomObject>
    <description>Dart Leveraged 9.29.12</description>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lines_Included__c</fullName>
        <label>Lines Included</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <label>MRC</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pooling Plans</relationshipLabel>
        <relationshipName>Pooling_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Qty__c</fullName>
        <label>Plan Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pooling_Type__c</fullName>
        <label>Pooling Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <label>Rate Plan Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Pooling Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Data__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Lines_Included__c</columns>
        <columns>Minutes__c</columns>
        <columns>MRC__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Plan_Qty__c</columns>
        <columns>Pooling_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pooling Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>